# fintech-analytics-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  middleware.py  models.py  schemas.py
app/api/: deps.py
app/api/v1/: analytics.py  auth.py  router.py  transactions.py
app/core/: config.py  logging.py  rbac.py  security.py
app/db/: base.py  seed.py  session.py
snowflake/: 01_warehouse_rbac.sql  02_raw_tables_streams.sql  03_dynamic_tables.sql  04_tasks.sql  05_stored_procedures.sql  README.md
snowflake/snowpark/: transform.py
sql/postgres/: analytics_queries.sql
tests/: conftest.py  test_analytics.py  test_auth.py  test_rbac.py
