[project]
name = "fintech-analytics-platform"
version = "0.1.0"
description = "FastAPI + Snowflake fintech financial-analytics platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses callables in defaults (Depends)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
